tests/lean/syntaxPrec.lean.expected.out
syntaxPrec.lean:1:18: error: expected ':'
[Elab.command] syntax "foo"("*" <|> term,+) : term
[Elab.command] failed to pretty print term (use 'set_option pp.rawOnError true' for raw representation)
